# Coursework-OOP-KAI-3-sem

./: CMakeLists.txt  README.md  main.cpp
BLL/: Models.h  Services.h
DAL/: DataAccess.h  JsonStorage.h  StorageFactory.h  WALJsonStorage.h
PL/: ConsoleInterface.h
Tests/: Tests.cpp
